# ai_client2

./: bun.lockb  package.json
src/: App.vue  Main.vue  Settings.vue  _markdown.scss  _multipane.scss  main.js  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: lib.rs
src/lib/: common.js  toPoints.js
src/lib/multipane/: multipane.vue
src/lib/vuf/: messages.js  validators.js  vuf.js
