[package]
name = "ai_client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.24", features = [ "blocking",  "json", "rustls-tls", "multipart", "stream" ] }
anyhow = "1.0.79"
futures = "0.3.30"
markdown = "1.0.0-alpha.16"
toml = "0.8.10"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.33"
sled = "0.34.7"
once_cell = "1.19.0"
tokio = "1.36.0"
rand = "0.8.5"
